infrastructure/ingresses/overlays/eks-demo/argocd-ingressroute-patch.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.eks-demo.platform.dspdemos.com`)
      kind: Rule
      services:
        - name: argocd-server
          port: 443
          scheme: https
          serversTransport: argocd-server-insecure-transport
  tls:
    secretName: argocd-server-tls
